--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,6 @@ Cerulean (#007BA7): For secondary elements and accents.
   --color-bg2: #fffff0;
   --color-highlights: #ff7f50;
   --color-highlights2: #c3542c;
-
   --color-text: #007ba7;
 }
 body {
@@ -44,7 +43,16 @@ h6 {
 }
 p {
   font-weight: normal;
-  font-size: 36px;
+  font-size: 24px;
+}
+a {
+  font-weight: normal;
+  font-size: 24px;
+  color: var(--color-text);
+  text-decoration: none;
+}
+a:hover {
+  color: var(--color-highlights);
 }
 .introduction {
   text-align: center;
@@ -76,4 +84,32 @@ p {
   background-color: var(--color-highlights2);
   color: var(--color-bg2);
   transition: all 200ms ease-in-out;
+}
+.section-introductions {
+  margin-top: 30px;
+  margin-bottom: 30px;
+  text-align: center;
+}
+.featured-project {
+  max-width: 70%;
+  display: block;
+  margin: 0 auto;
+}
+.featured-project h6 {
+  font-size: 35px;
+}
+.featured-project p {
+  font-size: 16px;
+  text-align: justify;
+  color: #000047;
+  opacity: 50%;
+}
+.featured-project a {
+  font-size: 15px;
+  display: block;
+  text-align: right;
+  color: var(--color-highlights);
+}
+.featured-project a:hover {
+  color: var(--color-highlights2);
 }
