--- a/css/style.css
+++ b/css/style.css
@@ -69,17 +69,6 @@ a:hover {
   margin-bottom: 10px;
   color: var(--color-text);
 }
-@media (max-width: 850px) {
-  .introduction h3 {
-    font-size: 28px;
-  }
-  .introduction h1 {
-    font-size: 38px;
-  }
-  .introduction h2 {
-    font-size: 22px;
-  }
-}
 .primary-button {
   border-radius: 4px;
   margin: 20px;
@@ -122,4 +111,26 @@ a:hover {
 }
 .featured-project a:hover {
   color: var(--color-highlights2);
+}
+@media (max-width: 850px) {
+  .introduction h3 {
+    font-size: 28px;
+  }
+  .introduction h1 {
+    font-size: 38px;
+  }
+  .introduction h2 {
+    font-size: 22px;
+  }
+  .featured-project h6 {
+    font-size: 25px;
+    text-align: center;
+  }
+  .featured-project p {
+    font-size: 12px;
+    text-align: center;
+  }
+  .featured-project a {
+    font-size: 11px;
+  }
 }
