--- a/css/style.css
+++ b/css/style.css
@@ -134,3 +134,54 @@ a:hover {
     font-size: 11px;
   }
 }
+/*FOOTER*/
+footer {
+  margin-bottom: none;
+  padding-top: 60px;
+}
+.floating-media-trio {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+.floating-media-unit {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  margin: 20px;
+}
+footer .floating-media-unit a {
+  font-size: 12px;
+  color: var(--color-headers);
+}
+footer i {
+  font-size: 20px;
+  color: var(--color-headers);
+}
+.floating-media-unit:hover {
+  color: var(--color-highlights);
+}
+
+footer p {
+  font-size: 12px;
+  text-align: center;
+  color: var(--color-headers);
+}
+footer p a {
+  font-size: 12px;
+  color: var(--color-highlights2);
+}
+@media (max-width: 850px) {
+  footer .floating-media-unit a {
+    font-size: 10px;
+  }
+  footer i {
+    font-size: 15px;
+  }
+  footer p {
+    font-size: 10px;
+  }
+  footer p a {
+    font-size: 10px;
+  }
+}
