--- a/css/style.css
+++ b/css/style.css
@@ -268,6 +268,7 @@ footer p a {
     padding-top: 0;
   }
 }
+/*My Work:*/
 .projects-display {
   background-color: #a7c7e75e;
   padding: 20px;
@@ -280,6 +281,7 @@ footer p a {
 }
 .projects-display h4 {
   font-size: 40px;
+  margin-bottom: 48px;
 }
 .projects-display p {
   font-size: 16px;
@@ -295,4 +297,26 @@ footer p a {
 }
 .projects-display a:hover {
   color: var(--color-highlights2);
+}
+@media (max-width: 850px) {
+  .projects-display {
+    padding: 20px;
+    margin: 20px;
+  }
+  .projects-display h4 {
+    font-size: 20px;
+    margin-bottom: 10px;
+  }
+  .projects-display p {
+    font-size: 9px;
+    text-align: center;
+  }
+  .projects-display a {
+    font-size: 9px;
+  }
+  .projects-display img {
+    max-width: 50%;
+    display: block;
+    margin: auto;
+  }
 }
