--- a/css/style.css
+++ b/css/style.css
@@ -164,7 +164,7 @@ footer i {
   font-size: 20px;
   color: var(--color-headers);
 }
-.floating-media-unit:hover {
+.floating-media-unit a:hover {
   color: var(--color-highlights);
 }
 
